--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.chota_don.myapplication" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_api_key" />
+
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -27,6 +37,14 @@
         <activity
             android:name=".login_facebook"
             android:label="@string/title_activity_login_facebook" >
+        </activity>
+        <activity
+            android:name=".mail"
+            android:label="@string/title_activity_mail" >
+        </activity>
+        <activity
+            android:name=".Facebook_detail"
+            android:label="@string/title_activity_facebook_detail" >
         </activity>
     </application>
 
